Build: Add the download_statistics plugin in the docker build system

--- a/provisioning/init.yml
+++ b/provisioning/init.yml
@@ -51,6 +51,7 @@
       token: "{{ admin['token'] }}"
       plugins:
         - slicer_extension_manager
+        - download_statistics
       state: present
 
   - name: Restart Girder Server
